--- a/Assignment-1.2/css/style.css
+++ b/Assignment-1.2/css/style.css
@@ -22,7 +22,7 @@ main {
 }
 
 .container {
-    width: 70%;
+    width: 80%;
     height: 80%;
 	margin: 0 auto;
     display: flex;
@@ -36,6 +36,28 @@ main {
 	width: 40%;
     height: 100%;
 }
+
+@media only screen and (max-width:568px){
+	.container{
+		width: 100%;
+	}
+	.login-part{
+		width: 100%;
+	}
+}
+
+@media only screen and (max-width:1200px){
+	.container{
+		display: block;
+		width: 80%;
+	}
+	.login-part{
+		width: 100%;
+	}
+}
+
+
+
 .right {
 	background-color: white;
 	align-items: center;
@@ -72,19 +94,12 @@ form {
 	text-align: start;
 }
 
-input, label {
-	display: block;
-	width: 100%;
-}
 form input{
     border: none;
     background-color: transparent;
     width: 100%;
     height: 100%;
     position: relative;
-}
-form label{
-    position: absolute;
 }
 
 form input:focus+label{
